tests/architecture/fixtures/invalid/order-command-boundaries/non-root-construction.ts
import { LocalOrderCommandRepository } from "../../../../../packages/sdk/src/commerce/orders/LocalOrderCommandRepository";

export const invalidConstruction = new LocalOrderCommandRepository({
  readOrderCommandRecords: () => [],
  replaceOrderCommandRecords: () => undefined,
});
